fix z-index add 1 day if same date

--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -37,7 +37,7 @@ body {
   background-position: 45% 40%;
   background-size: 10%;
   position: absolute;
-  z-index: 5000;
+  z-index: 100;
   height: 100%;
   width: 100%;
 }
