--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -26,7 +26,7 @@ body {
   background: #fff url('../../images/loading.gif') no-repeat center;
   background-size: 15%;
   position: absolute;
-  z-index: 5000;
+  z-index: 100;
   height: 100%;
   width: 100%;
 }
